--- a/WebAirport/Views/Shared/_Layout.cshtml
+++ b/WebAirport/Views/Shared/_Layout.cshtml
@@ -22,8 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Информация", "About", "Home")</li>
-                    <li>@Html.ActionLink("Связаться", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Должности", "Position", "Home")</li>
                 </ul>
             </div>
         </div>
