Add StaffController, View and acrions

--- a/WebAirport/Views/Position/Edit.cshtml
+++ b/WebAirport/Views/Position/Edit.cshtml
@@ -6,7 +6,7 @@
 <h2>Edit</h2>
 
 <form method="post">
-    <input type="text" hidden name="PositionId" value="@ViewBag.Position.PositionId" />
+    <input type="text" hidden name="PositionId" value="@ViewBag.Position.Id" />
     <table>
         <tr>
             <td>Название</td>
