--- a/WebAirport/Views/Position/ListPosition.cshtml
+++ b/WebAirport/Views/Position/ListPosition.cshtml
@@ -35,7 +35,7 @@
             <td><p>@p.Salary</p></td>
             <td><p>@p.Responsibilities</p></td>
             <td><p>@p.Requirements</p></td>
-            <td><a href="/Position/Edit/@p.PositionId">Редактировать</a></td>
+            <td><a href="/Position/Edit/@p.Id">Редактировать</a></td>
         </tr>
     }
 </table>
