Add script ajax, modify shema, modify several controllers, modify models, modify views, add dbinit one table

--- a/WebAirport/Views/Airplane/ListAirplane.cshtml
+++ b/WebAirport/Views/Airplane/ListAirplane.cshtml
@@ -27,6 +27,7 @@
             <td>@String.Format("{0:dd.MM.yyyy}", air.ReleaseDate)</td>
             <td>@String.Format("{0:dd.MM.yyyy}", air.LastRepairDate)</td>
             <td>@air.TypeAirplane.NameType</td>
+            <td>@Html.ActionLink("Редактировать", "Edit", "Airplane", new { Id=air.Id }, null)</td>
         </tr>
     }
 </table>
