--- a/WebAirport/Views/Home/Airplane.cshtml
+++ b/WebAirport/Views/Home/Airplane.cshtml
@@ -6,5 +6,6 @@
 <h2>Самолеты</h2>
 <div>
     <a href="/Airplane/Create">Добавить новый самолет</a>
+    <a href="/Airplane/ListAirplane">Список самолетов</a>
 </div>
 
