Controller and View`s from Flight, modifired several view` and controllers from Airplane, Home, Ticket and modifired models

--- a/WebAirport/Views/Airplane/Create.cshtml
+++ b/WebAirport/Views/Airplane/Create.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Новый самолет";
 }
 
+<div>
+    @Html.ActionLink("Список самолетов", "/ListAirplane")
+</div>
+
 <h2>Добавление самолета</h2>
 
 <div>
