--- a/WebAirport/Views/Airplane/Edit.cshtml
+++ b/WebAirport/Views/Airplane/Edit.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Редактирование самолета";
 }
 
+<div>
+    @Html.ActionLink("Добавить новый самолет", "/Create")
+    @Html.ActionLink("Список самолетов", "/ListAirplane")
+</div>
+
 <h2>Данные выбранного самолета</h2>
 
 <div>
