--- a/WebAirport/Views/Airplane/ListAirplane.cshtml
+++ b/WebAirport/Views/Airplane/ListAirplane.cshtml
@@ -3,6 +3,9 @@
     ViewBag.Title = "Парк самолетов";
 }
 
+<div>
+    @Html.ActionLink("Добавить новый самолет", "/Create")
+</div>
 <h2>Список самолетов</h2>
 
 <table>
