--- a/WebAirport/Views/Shared/_Layout.cshtml
+++ b/WebAirport/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Сотрудники", "Staff", "Home")</li>
                     <li>@Html.ActionLink("Типы самолетов", "TypeAirplane", "Home")</li>
                     <li>@Html.ActionLink("Самолеты", "Airplane", "Home")</li>
+                    <li>@Html.ActionLink("Рейсы", "Flight", "Home")</li>
                 </ul>
             </div>
         </div>
