--- a/WebAirport/Views/Flight/ListAirplaneByType.cshtml
+++ b/WebAirport/Views/Flight/ListAirplaneByType.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<WebAirport.Models.Airplane>
 
-<select name="Id">
+<select name="AirplaneId">
         @foreach(var item in Model)
         {
             <option value="@item.Id">@item.Model</option>
