--- a/WebAirport/Views/Home/Flight.cshtml
+++ b/WebAirport/Views/Home/Flight.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Рейсы";
 }
 
-<h2>Меню работы с рейсами</h2>
+<h2>Управление рейсами</h2>
 
 <div>
-    @Html.ActionLink("Добавить", "/Create", "Flight")
+    @Html.ActionLink("Добавить рейс", "/Create", "Flight")
     @Html.ActionLink("Список рейсов", "/ListFlight", "Flight")
 </div>
