--- a/WebAirport/Views/Home/Position.cshtml
+++ b/WebAirport/Views/Home/Position.cshtml
@@ -2,5 +2,6 @@
 @{
     ViewBag.Title = "Должности";
 }
-<a href="/Position/Create">Добавить</a>
+<h2>Управление должностями</h2>
+<a href="/Position/Create">Добавить должность</a>
 <a href="/Position/ListPosition">Список должностей</a>
