--- a/WebAirport/Views/Position/ListPosition.cshtml
+++ b/WebAirport/Views/Position/ListPosition.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Список должностей";
 }
 
+<div>
+    @Html.ActionLink("Добавить должность", "/Create")
+</div>
+
 <h2>Список должностей</h2>
 
 <table>
