--- a/WebAirport/Views/Staff/Create.cshtml
+++ b/WebAirport/Views/Staff/Create.cshtml
@@ -3,6 +3,12 @@
     ViewBag.Title = "Добавление сотрудника";
 }
 
+<div>
+    @Html.ActionLink("Список сотрудников", "/ListStaff")
+</div>
+
+<h2>Добавление сотрудника</h2>
+
 <form method="post">
     <table>
         <tr>
