--- a/WebAirport/Views/Staff/ListStaff.cshtml
+++ b/WebAirport/Views/Staff/ListStaff.cshtml
@@ -4,6 +4,10 @@
 }
 
 <div>
+    @Html.ActionLink("Добавить сотрудника", "/Create")
+</div>
+<h2>Список всех сотрудников</h2>
+<div>
     <table>
         <tr>
             <td><p>Фамилия Имя</p></td>
