--- a/WebAirport/Views/Home/Staff.cshtml
+++ b/WebAirport/Views/Home/Staff.cshtml
@@ -4,6 +4,6 @@
 }
 
 <h2>Управление сотрудниками</h2>
-<a href="/Staff/Create">Добавить нового сотрудника</a>
+<a href="/Staff/Create">Добавить сотрудника</a>
 <a href="/Staff/ListStaff">Список сотрудников</a>
 
