--- a/WebAirport/Views/Home/TypeAirplane.cshtml
+++ b/WebAirport/Views/Home/TypeAirplane.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Типы самолетов";
 }
 
-<h2>Типы самолетов</h2>
+<h2>Управление типами самолетов</h2>
 
 <div>
-    <a href="/TypeAirplane/Create">Добавить новый</a>
+    <a href="/TypeAirplane/Create">Добавить тип самолета</a>
     <a href="/TypeAirplane/ListTypeAirplane">Список типов самолетов</a>
 </div>
