--- a/WebAirport/Views/Position/Edit.cshtml
+++ b/WebAirport/Views/Position/Edit.cshtml
@@ -3,7 +3,12 @@
     ViewBag.Title = "Редактирование должности";
 }
 
-<h2>Edit</h2>
+<div>
+    @Html.ActionLink("Добавить должность", "/Create")
+    @Html.ActionLink("Список должностей", "/ListPosition")
+</div>
+
+<h2>Редактирование выбранной должности</h2>
 
 <form method="post">
     <input type="text" hidden name="PositionId" value="@ViewBag.Position.Id" />
