--- a/WebAirport/Views/Shared/_Layout.cshtml
+++ b/WebAirport/Views/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Должности", "Position", "Home")</li>
                     <li>@Html.ActionLink("Сотрудники", "Staff", "Home")</li>
                     <li>@Html.ActionLink("Типы самолетов", "TypeAirplane", "Home")</li>
                     <li>@Html.ActionLink("Самолеты", "Airplane", "Home")</li>
                     <li>@Html.ActionLink("Рейсы", "Flight", "Home")</li>
+                    <li>@Html.ActionLink("Билеты", "Ticket", "Home")</li>
                 </ul>
             </div>
         </div>
