modified view`s from "List" with Position, Airplane, Staff, TypeAirplane. End create DbInit

--- a/WebAirport/Views/Airplane/Create.cshtml
+++ b/WebAirport/Views/Airplane/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    @Html.ActionLink("Список самолетов", "/ListAirplane")
+    @Html.ActionLink("Список самолетов", "Index")
 </div>
 
 <h2>Добавление самолета</h2>
