--- a/WebAirport/Views/Airplane/Edit.cshtml
+++ b/WebAirport/Views/Airplane/Edit.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div>
-    @Html.ActionLink("Добавить новый самолет", "/Create")
-    @Html.ActionLink("Список самолетов", "/ListAirplane")
+    @Html.ActionLink("Добавить новый самолет", "Create")
+    @Html.ActionLink("Список самолетов", "Index")
 </div>
 
 <h2>Данные выбранного самолета</h2>
