--- a/WebAirport/Views/Position/Create.cshtml
+++ b/WebAirport/Views/Position/Create.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = "Новая должность";
 }
 <div>
-    @Html.ActionLink("Добавить должность","/Create")
-    @Html.ActionLink("Список должностей", "/ListPosition")
+    @Html.ActionLink("Список должностей", "Index")
 </div>
 
 <h2>Данные для добавления новой должности</h2>
