--- a/WebAirport/Views/Position/Edit.cshtml
+++ b/WebAirport/Views/Position/Edit.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div>
-    @Html.ActionLink("Добавить должность", "/Create")
-    @Html.ActionLink("Список должностей", "/ListPosition")
+    @Html.ActionLink("Добавить должность", "Create")
+    @Html.ActionLink("Список должностей", "Index")
 </div>
 
 <h2>Редактирование выбранной должности</h2>
