--- a/WebAirport/Views/Shared/_Layout.cshtml
+++ b/WebAirport/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Должности", "Position", "Home")</li>
-                    <li>@Html.ActionLink("Сотрудники", "Staff", "Home")</li>
-                    <li>@Html.ActionLink("Типы самолетов", "TypeAirplane", "Home")</li>
-                    <li>@Html.ActionLink("Самолеты", "Airplane", "Home")</li>
+                    <li>@Html.ActionLink("Должности", "Index", "Position")</li>
+                    <li>@Html.ActionLink("Сотрудники", "Index", "Staff")</li>
+                    <li>@Html.ActionLink("Типы самолетов", "Index", "TypeAirplane")</li>
+                    <li>@Html.ActionLink("Самолеты", "Index", "Airplane")</li>
                     <li>@Html.ActionLink("Рейсы", "Flight", "Home")</li>
                     <li>@Html.ActionLink("Билеты", "Ticket", "Home")</li>
                 </ul>
