--- a/WebAirport/Views/Staff/Create.cshtml
+++ b/WebAirport/Views/Staff/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    @Html.ActionLink("Список сотрудников", "/ListStaff")
+    @Html.ActionLink("Список сотрудников", "Index")
 </div>
 
 <h2>Добавление сотрудника</h2>
