--- a/WebAirport/Views/Staff/Edit.cshtml
+++ b/WebAirport/Views/Staff/Edit.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "Редактирование сотрудника";
 }
 <div>
-    @Html.ActionLink("Добавить сотрудника", "/Create")
-    @Html.ActionLink("Список сотрудников", "/ListStaff")
+    @Html.ActionLink("Добавить сотрудника", "Create")
+    @Html.ActionLink("Список сотрудников", "Index")
 </div>
 
 <h2>Редактирование сотрудника</h2>
