modify all index files

--- a/WebAirport/Views/Flight/Edit.cshtml
+++ b/WebAirport/Views/Flight/Edit.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div>
-    @Html.ActionLink("Добавить новый рейс", "/Create")
-    @Html.ActionLink("Список всех рейсов","/ListFlight")
+    @Html.ActionLink("Добавить новый рейс", "Create")
+    @Html.ActionLink("Список всех рейсов","Index")
 </div>
 
 <h2>Редактирование рейса</h2>
