--- a/WebAirport/Views/Shared/_Layout.cshtml
+++ b/WebAirport/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
                     <li>@Html.ActionLink("Сотрудники", "Index", "Staff")</li>
                     <li>@Html.ActionLink("Типы самолетов", "Index", "TypeAirplane")</li>
                     <li>@Html.ActionLink("Самолеты", "Index", "Airplane")</li>
-                    <li>@Html.ActionLink("Рейсы", "Flight", "Home")</li>
-                    <li>@Html.ActionLink("Билеты", "Ticket", "Home")</li>
+                    <li>@Html.ActionLink("Рейсы", "Index", "Flight")</li>
+                    <li>@Html.ActionLink("Билеты", "Index", "Ticket")</li>
                 </ul>
             </div>
         </div>
