--- a/WebAirport/Views/Ticket/Create.cshtml
+++ b/WebAirport/Views/Ticket/Create.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewBag.Title = "Добавить билет";
 }
-
+    <div>
+        @Html.ActionLink("Список билетов", "Index")
+    </div>
 <h2>Добавить новый билет</h2>
 
 <div>
