--- a/WebAirport/Views/Flight/Create.cshtml
+++ b/WebAirport/Views/Flight/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div>
-    @Html.ActionLink("Список рейсов", "/ListFlight")
+    @Html.ActionLink("Список рейсов", "Index")
 </div>
 
 <h2>Добавление рейса</h2>
