--- a/WebAirport/Views/Ticket/Index.cshtml
+++ b/WebAirport/Views/Ticket/Index.cshtml
@@ -1,7 +1,45 @@
-﻿
+﻿@model PagedList.IPagedList<WebAirport.Models.Ticket>
+@using PagedList.Mvc;
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Список билетов";
 }
 
-<h2>Index</h2>
+@{
+    ViewBag.Title = "Билеты";
+}
+    <div>
+        @Html.ActionLink("Добавить билет", "Create")
+    </div>
+
+
+<h2>Управление билетами</h2>
+
+<table>
+    <tr>
+        <td>Фамилия и Имя</td>
+        <td>Отчество</td>
+        <td>Паспортные данные</td>
+        <td>Должность</td>
+        <td>Место в самолете</td>
+        <td>Стоимость перелета</td>
+    </tr>
+    @foreach (var ticket in Model)
+    {
+        <tr>
+            <td>@ticket.FirstNamePassenger</td>
+            <td>@ticket.LastNamePassenger</td>
+            <td>@ticket.Passport</td>
+            <td>@ticket.PositionPassenger</td>
+            <td>@ticket.Seat</td>
+            <td>@ticket.Price</td>
+        </tr>
+    }
+</table>
+
+Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
+
+
 
